# mad_pod_racing

./: LICENSE  README.md  compress_DDQN.py  compress_duelingDQN.py  env.py  main.py  pyproject.toml  train_QAgent_env_solo.py  train_QAgent_env_with_blocker.py  train_QAgent_fromdata.py
agents/: DDQNagent.py  DDQNagent_prioritized.py  basic_agents.py  double_Qagent.py
codingame/: codingame_DDQN_template.py  codingame_duelingDQN_template.py
engine/: game_rule.py  game_sim.py  interact.py  io.py  model.py  model_dueling.py  replay_buffer.py  util.py  vec2.py
research/: Q_learning_for_mad_pod.md
